--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8">
                     <div class="section-title text-center">
-                        <h4 class="sub-title">Important <span>FAQS</span></h4>
+                        <h4 class="sub-title">Important <span>FAQ</span></h4>
                         <h2 class="title-main">Frequently Asked <span>Questions.</span></h2>
                         <div class="divider"></div>
                     </div>
